[metadata]
name = cistercian
version = 1.0.1
description = A library for generating Cistercian Numeral images.
long_description = file: README.md
long_description_content_type = text/markdown
author = tealee
author_email = tealej7@gmail.com
url = https://github.com/teeale/Cistercian
keywords = numerals, cistercian, images
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities
    Development Status :: 4 - Beta

[options]
py_modules = cistercian
python_requires = >=3.6
install_requires =
    Pillow >= 8.0.0
